Fixed viewport. Added overflow hidden to wrapper.

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,3 +1,7 @@
+.wrapper {
+  overflow: hidden;
+}
+
 .fastReview {
   padding-top: 110px;
   padding-left: 50px;
